# GMD_SGT

./: CHANGELOG.md  DEVELOPMENT.md  README.md  pyproject.toml
configs/: default.yaml  stage1_backbone.yaml  stage2_residual.yaml  water.yaml
gmd_se3gnn/: __init__.py  api.py  train.py
gmd_se3gnn/data/: __init__.py  split.py
gmd_se3gnn/inference/: calculator.py  export.py
gmd_se3gnn/models/: __init__.py  blocks.py  core.py  long_range.py  message_passing.py  radial.py
gmd_se3gnn/training/: __init__.py  trainer.py
gmd_sgt/: __init__.py  api.py  model.py  train.py
gmd_sgt/data/: __init__.py  dataset.py  reader.py  statistics.py  validation.py
gmd_sgt/inference/: __init__.py  calculator.py  export.py
gmd_sgt/models/: __init__.py  backbone_allegro_style.py  core.py  dependencies.py  factory.py  geometry.py  gmd_sgt_model.py  gnn_correction.py  readout.py  transformer_correction.py
gmd_sgt/training/: __init__.py  loss.py  train_backbone.py  train_residual.py  trainer.py
scripts/: export_model.py  plot_force_corr_one_frame.py  smoke_test.py  test_train_extxyz.py  train_cli.py  train_scalar_model.py  train_scalar_quick.py
tests/: test_api.py  test_calculator.py  test_energy_force_consistency.py  test_equivariance.py  test_freeze_backbone.py  test_model_forward.py
